--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "homepage": "https://github.com/WAAC/d-web#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "express-subdomain": "^1.0.5",
+    "hbs": "~3.1.0"
   }
 }
