--- a/package.json
+++ b/package.json
@@ -37,8 +37,15 @@
   },
   "homepage": "https://github.com/WAAC/d-web#readme",
   "dependencies": {
+    "body-parser": "~1.13.2",
+    "connect-redis": "^3.0.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
     "express": "^4.13.4",
-    "express-subdomain": "^1.0.5",
-    "hbs": "~3.1.0"
+    "express-session": "^1.13.0",
+    "hbs": "~3.1.0",
+    "morgan": "~1.6.1",
+    "redis": "^2.4.2",
+    "serve-favicon": "~2.3.0"
   }
 }
