--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "jquery": "^2.1.4",
     "bootstrap": "^3.3.5",
-    "jquery.easing": "^1.3"
+    "jquery.easing": "^1.3",
+    "bootstrap-social": "^4.12.0",
+    "components-font-awesome": "^4.5.0"
   }
 }
