--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "morgan": "~1.6.1",
+    "passport": ">= 0.0.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": ">= 0.0.0",
     "redis": "^2.4.2",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
