--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "bootstrap": "^3.3.5",
     "jquery.easing": "^1.3",
     "bootstrap-social": "^4.12.0",
-    "components-font-awesome": "^4.5.0"
+    "components-font-awesome": "^4.5.0",
+    "angular": "1.5.0"
   }
 }
