--- a/package.json
+++ b/package.json
@@ -36,18 +36,14 @@
   },
   "homepage": "https://github.com/WAAC/d-web#readme",
   "dependencies": {
-    "angular2": "2.0.0-alpha.8.prod",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15",
-
+    "aws-sdk": "^2.2.43",
     "body-parser": "~1.13.2",
     "bower": "^1.7.7",
+    "busboy": "^0.2.12",
     "connect-redis": "^3.0.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "del": "^2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "gulp": "^3.9.1",
@@ -55,6 +51,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
+    "node-uuid": "^1.4.7",
     "passport": ">= 0.0.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth2": ">= 0.0.0",
