--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "del": "^2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "file-stream-rotator": "0.0.6",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
