--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A platform for online startups to find good teammates, manage the startup, help to get fund by VC or crowd sources. server & test platform",
   "main": "boot.js",
   "scripts": {
-    "setup": "bower install --allow-root && npm install && gulp && npm test",
+    "setup": "bower install --allow-root && npm install && gulp",
     "dev-run-supervisor": "npm test && supervisor -i public,upload,assets,node_modules,bower_components boot.js",
     "dev-run": "npm test && node boot.js",
     "test": "jshint ."
