--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "jquery.easing": "^1.3",
     "bootstrap-social": "^4.12.0",
     "components-font-awesome": "^4.5.0",
-    "angular": "1.5.0"
+    "angular": "1.5.0",
+    "moment": "^2.13.0"
   }
 }
