--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "bootstrap-social": "^4.12.0",
     "components-font-awesome": "^4.5.0",
     "angular": "1.5.0",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "angular-socket-io": "^0.7.0"
   }
 }
