--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "redis": "^2.4.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.6",
+    "socket.io-redis": "^1.0.0",
     "swig": "^1.4.2"
   },
   "devDependencies": {
