--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "body-parser": "~1.13.2",
     "bower": "^1.7.7",
     "busboy": "^0.2.12",
+    "connect": "^3.4.1",
     "connect-redis": "^3.0.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
