--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "passport": ">= 0.0.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth2": ">= 0.0.0",
+    "promise": "^7.1.1",
     "redis": "^2.4.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.6",
