--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "components-font-awesome": "^4.5.0",
     "angular": "1.5.0",
     "moment": "^2.13.0",
-    "angular-socket-io": "^0.7.0"
+    "angular-socket-io": "^0.7.0",
+    "notifyjs": "^0.4.2"
   }
 }
