--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A platform for online startups to find good teammates, manage the startup, help to get fund by VC or crowd sources. server & test platform",
   "main": "boot.js",
   "scripts": {
-    "setup": "bower install && gulp",
+    "setup": "bower install --allow-root && gulp",
     "boot-dev": "npm test && supervisor -i public,upload,assets,node_modules,bower_components boot.js",
     "boot-dev-single": "npm test && supervisor -i public,upload,assets,node_modules,bower_components server.js",
     "start": "npm test && node boot.js",
