--- a/package.json
+++ b/package.json
@@ -60,9 +60,8 @@
     "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
-    "passport": ">= 0.0.0",
-    "passport-google-oauth": "^1.0.0",
-    "passport-google-oauth2": ">= 0.0.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth2": "^0.1.6",
     "promise": "^7.1.1",
     "redis": "^2.4.2",
     "serve-favicon": "~2.3.0",
