--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "deeployer-web",
+  "name": "eloyt.com",
   "description": "A platform for online startups to find good teammates, manage the startup, help to get fund by VC or crowd sources. server & test platform",
   "main": "index.js",
   "authors": [
@@ -8,7 +8,7 @@
   ],
   "license": "ISC",
   "keywords": [
-    "deeployer",
+    "eloyt",
     "platform",
     "startup",
     "vc",
