fix 2 sockets bounds

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "boot-dev": "npm test && supervisor -i public,upload,assets,node_modules,bower_components boot.js",
     "boot-dev-single": "npm test && supervisor -i public,upload,assets,node_modules,bower_components server.js",
     "start": "npm test && node boot.js",
-    "test": "jshint . && exit 0",
+    "test": "npm cache clear && jshint . && exit 0",
     "dir-fix": "chown -R $(whoami) ."
   },
   "pre-commit": {
