--- a/package.json
+++ b/package.json
@@ -42,23 +42,23 @@
   "homepage": "https://github.com/WAAC/d-web#readme",
   "dependencies": {
     "aws-sdk": "^2.2.43",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.15.2",
     "bower": "^1.7.7",
     "busboy": "^0.2.12",
     "connect": "^3.4.1",
     "connect-redis": "^3.0.2",
-    "cookie-parser": "~1.3.5",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "del": "^2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "file-stream-rotator": "0.0.6",
+    "file-stream-rotator": "0.0.7",
     "geolib": "^2.0.21",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "mongoose": "^4.4.6",
-    "morgan": "~1.6.1",
+    "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-google-oauth2": "^0.1.6",
@@ -70,7 +70,9 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
+    "mocha": "^3.0.0",
     "pre-commit": "^1.1.2",
-    "pre-push": "^0.1.1"
+    "pre-push": "^0.1.1",
+    "supertest": "^2.0.0"
   }
 }
