--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "busboy": "^0.2.12",
     "connect": "^3.4.1",
     "connect-redis": "^3.0.2",
+    "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "del": "^2.2.0",
